# mihomoctl

./: Cargo.toml  README.md  justfile
.github/workflows/: release.yaml
docs/superpowers/plans/: 2026-07-06-controller-kind-detection.md  2026-07-08-release-assets.md
docs/superpowers/specs/: 2026-07-06-controller-kind-detection-design.md  2026-07-08-release-assets-design.md
mihomoctl/: Cargo.toml
mihomoctl-core/: Cargo.toml  README.md
mihomoctl-core/src/: api.rs  lib.rs
mihomoctl-core/src/model/: config.rs  connection.rs  proxy.rs
mihomoctl-core/src/test/: api.rs
mihomoctl/src/: error.rs  main.rs  proxy_render.rs  utils.rs
mihomoctl/src/command/: completion.rs  proxy.rs  server.rs
mihomoctl/src/interactive/: config.rs  error.rs  flags.rs  mod.rs
mihomoctl/src/interactive/sort/: con_sort.rs  proxy_sort.rs  rule_sort.rs
mihomoctl/src/ui/: action.rs  api.rs  app.rs  config.rs  error.rs  event.rs  mod.rs  servo.rs  state.rs  tui_opt.rs
mihomoctl/src/ui/components/: constants.rs  tabs.rs
mihomoctl/src/ui/components/movable_list/: item.rs  state.rs  widget.rs
mihomoctl/src/ui/components/proxy/: group.rs  item.rs  tree.rs  tree_widget.rs
mihomoctl/src/ui/pages/: api.rs  config.rs  connection.rs  log.rs  mod.rs  rule.rs  status.rs
mihomoctl/src/ui/utils/: as_color.rs  helper.rs  interval.rs
